k8s_AWS_https적용후/deploy_https_AWS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-backend

spec:
  revisionHistoryLimit: 2
  replicas: 1

  selector:
    matchLabels:
      app: account-backend

  template:
    metadata:
      labels:
        app: account-backend

    spec:
      containers:
        - name: account-backend
          image: 061039804626.dkr.ecr.ap-northeast-2.amazonaws.com/my-ecr-lcy:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 100
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 100
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: account-backend-service

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: 8080

  selector:
    app: account-backend
